# EvalDocsLoader

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
evaldocsloader/: auto_tests.py  config.py  loader.py  loader_base.py  loader_fetch.py  loader_function.py  loader_repository.py  plugin.py
testing_api/: .flaskenv  app.py
testing_api/docs/: arrayEqual.md  isExactEqual.md  isSimilar.md  isSimilar3.md  symbolicEqual.md
